--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "framer-motion": "^11.3.18",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.416.0",
+    "moment": "^2.30.1",
     "papaparse": "^5.4.1",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
